--- a/orders.html
+++ b/orders.html
@@ -264,7 +264,7 @@
                             <td>Kutilmoqda</td>
                             <td>23 soat</td>
                             <td>
-                              <a class="btn p-1" href="./hostel-view.html">
+                              <a class="btn p-1" href="./order-edit.html">
                                 <i class="fas fa-pen"></i>
                               </a>
                               <button class="btn p-1">
@@ -283,7 +283,7 @@
                             <td>To'langan</td>
                             <td></td>
                             <td>
-                              <a class="btn p-1" href="./hostel-view.html">
+                              <a class="btn p-1" href="./order-edit.html">
                                 <i class="fas fa-pen"></i>
                               </a>
                               <button class="btn p-1">
