--- a/tour-view.html
+++ b/tour-view.html
@@ -312,6 +312,7 @@
                   </div>
                   <div class="card mb-3">
                     <div class="card-body">
+                      <h5>Kattalar ma'lumotlari uchun</h5>
                       <div class="row g-3 mb-3">
                         <div class="col-md-6">
                           <label class="form-label" for="">To'liq ism</label>
@@ -391,6 +392,7 @@
                   </div>
                   <div class="card mb-3">
                     <div class="card-body">
+                      <h5>Bolalar ma'lumotlari uchun</h5>
                       <div class="row g-3 mb-3">
                         <div class="col-md-6">
                           <label class="form-label" for="">To'liq ism</label>
