--- a/tour.html
+++ b/tour.html
@@ -199,9 +199,9 @@
                     <span class="text-muted fw-light"
                       ><a href="./index.html">Asosiy</a> /</span
                     >
-                    Paketlar
+                    Tur Paketlar
                   </h4>
-                  <a class="btn btn-success" href="./create-tour.html"
+                  <a class="btn btn-success" href="./tour-create.html"
                     >Yaratish</a
                   >
                 </div>
