--- a/tour-create.html
+++ b/tour-create.html
@@ -39,7 +39,7 @@
                 <span
                   class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray"
                 >
-                  23232
+                  DEMO
                 </span>
               </a>
               <button
