--- a/adminstrator-view.html
+++ b/adminstrator-view.html
@@ -9,13 +9,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/core.css" />
     <link rel="stylesheet" href="./css/theme-default.css" />
     <link rel="stylesheet" href="./css/demo.css" />
@@ -30,16 +32,19 @@
         <div class="layout-container">
           <aside
             id="layout-menu"
-            class="layout-menu menu-vertical menu bg-menu-theme">
+            class="layout-menu menu-vertical menu bg-menu-theme"
+          >
             <div class="app-brand demo justify-content-start">
               <a href="#" class="app-brand-link">
                 <span
-                  class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray">
+                  class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray"
+                >
                   DEMO
                 </span>
               </a>
               <button
-                class="layout-menu-toggle menu-link text-large ms-auto d-flex d-xl-none">
+                class="layout-menu-toggle menu-link text-large ms-auto d-flex d-xl-none"
+              >
                 <i class="fas fa-chevron-left"></i>
               </button>
             </div>
@@ -47,26 +52,26 @@
             <div class="menu-inner-shadow"></div>
 
             <ul class="menu-inner py-1">
-              <li class="menu-item active">
-                <a href="#" class="menu-link">
+              <li class="menu-item">
+                <a href="./index.html" class="menu-link">
                   <i class="fas fa-chart-pie menu-icon tf-icons"></i>
                   <div>Dashboard</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./tour.html" class="menu-link">
                   <i class="fa-solid fa-ticket menu-icon tf-icons"></i>
                   <div>Tur paket</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./orders.html" class="menu-link">
                   <i class="fa-solid fa-rectangle-list menu-icon tf-icons"></i>
                   <div>Buyurtmalar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./airplane.html" class="menu-link">
                   <i class="fa-solid fa-plane menu-icon tf-icons"></i>
                   <div>Havo yo'llari</div>
                 </a>
@@ -78,37 +83,37 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./room.html" class="menu-link">
                   <i class="fa-solid fa-bed menu-icon tf-icons"></i>
                   <div>Xonalar</div>
                 </a>
               </li>
-              <li class="menu-item">
-                <a href="#" class="menu-link">
+              <li class="menu-item active">
+                <a href="./adminstrator.html" class="menu-link">
                   <i class="fa-solid fa-user-tie menu-icon tf-icons"></i>
                   <div>Adminstrator</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./role.html" class="menu-link">
                   <i class="fa-solid fa-circle-check menu-icon tf-icons"></i>
                   <div>Role</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./news.html" class="menu-link">
                   <i class="fa-solid fa-newspaper menu-icon tf-icons"></i>
                   <div>Yangiliklar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
-                  <i class="fa-solid fa-code-adminstrator.html menu-icon tf-icons"></i>
+                <a href="./branch.html" class="menu-link">
+                  <i class="fa-solid fa-code-branch menu-icon tf-icons"></i>
                   <div>Filyallar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./settings.html" class="menu-link">
                   <i class="fa-solid fa-gear menu-icon tf-icons"></i>
                   <div>Sozlamalar</div>
                 </a>
@@ -119,9 +124,11 @@
           <div class="layout-page">
             <nav
               class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-              id="layout-navbar">
+              id="layout-navbar"
+            >
               <div
-                class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+                class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none"
+              >
                 <button class="btn nav-item nav-link px-0 me-xl-4">
                   <svg
                     aria-hidden="true"
@@ -131,27 +138,32 @@
                     class="svg-inline--fa fa-bars"
                     role="img"
                     xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 448 512">
+                    viewBox="0 0 448 512"
+                  >
                     <path
                       fill="currentColor"
-                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"></path>
+                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
+                    ></path>
                   </svg>
                 </button>
               </div>
               <div
                 class="navbar-nav-right d-flex align-items-center"
-                id="navbar-collapse">
+                id="navbar-collapse"
+              >
                 <ul class="navbar-nav flex-row align-items-center ms-auto">
                   <li class="nav-item me-4">
                     <div
-                      class="nav-item dropdown ml-auto pr-lang-dropdown dropdown">
+                      class="nav-item dropdown ml-auto pr-lang-dropdown dropdown"
+                    >
                       <button
                         type="button"
                         id="languageDropdown"
                         aria-expanded="false"
                         data-toggle="dropdown"
                         aria-haspopup="true"
-                        class="btn btn-outline-info dropdown-toggle dropdown-toggle btn btn-primary">
+                        class="btn btn-outline-info dropdown-toggle dropdown-toggle btn btn-primary"
+                      >
                         Русский
                       </button>
                     </div>
@@ -162,12 +174,14 @@
                         type="button"
                         id="dropdown-basic"
                         aria-expanded="false"
-                        class="pr-dropdown-user dropdown-toggle btn btn-none">
+                        class="pr-dropdown-user dropdown-toggle btn btn-none"
+                      >
                         <div class="avatar avatar-online">
                           <img
                             src="./img/no-photo.webp"
                             alt=""
-                            class="w-px-40 h-auto rounded-circle" />
+                            class="w-px-40 h-auto rounded-circle"
+                          />
                         </div>
                       </button>
                     </div>
@@ -180,30 +194,35 @@
               <div class="container-xxl flex-grow-1 container-p-y">
                 <div>
                   <div
-                    class="d-flex mb-4 align-items-center justify-content-between">
+                    class="d-flex mb-4 align-items-center justify-content-between"
+                  >
                     <h4 class="py-3 mb-0">
                       <span class="text-muted fw-light"
                         ><a href="/">Asosiy</a> /</span
                       >
                       <span class="text-muted fw-light"
-                        ><a href="./adminstrator.html">Adminstratorlar</a> /</span
+                        ><a href="./adminstrator.html">Adminstratorlar</a>
+                        /</span
                       >
                       Toxirjonova Dildora Sardorovna
                     </h4>
-                    <a class="btn btn-info" href="./adminstrator.html">Orqaga</a>
+                    <a class="btn btn-info" href="./adminstrator.html"
+                      >Orqaga</a
+                    >
                   </div>
                   <div class="card mb-3">
                     <div class="card-body">
                       <div class="row">
                         <div class="col-md-6">
                           <table
-                            class="table table-striped table-bordered detail-view">
+                            class="table table-striped table-bordered detail-view"
+                          >
                             <tbody>
                               <tr>
                                 <th>Идентификатор</th>
                                 <td>1</td>
                               </tr>
-                              <tr>
+                              <tr></tr>
                               <tr>
                                 <th>FISH</th>
                                 <td>Toxirjonova Dildora Sardorovna</td>
@@ -214,9 +233,7 @@
                               </tr>
                               <tr>
                                 <th>Elektron manzil</th>
-                                <td>
-                                  toxirjonova45@gmail.com
-                                </td>
+                                <td>toxirjonova45@gmail.com</td>
                               </tr>
                               <tr>
                                 <th>Buyurtmalar soni</th>
@@ -231,9 +248,10 @@
                         </div>
                         <div class="col-md-6">
                           <table
-                            class="table table-striped table-bordered detail-view">
+                            class="table table-striped table-bordered detail-view"
+                          >
                             <tbody>
-                              <tr>
+                              <tr></tr>
                               <tr>
                                 <th>Yaratuvchi</th>
                                 <td>Muxtorova Malika</td>
@@ -266,9 +284,11 @@
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+  ></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+  ></script>
 </html>
