--- a/adminstrator.html
+++ b/adminstrator.html
@@ -9,13 +9,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/core.css" />
     <link rel="stylesheet" href="./css/theme-default.css" />
     <link rel="stylesheet" href="./css/demo.css" />
@@ -30,16 +32,19 @@
         <div class="layout-container">
           <aside
             id="layout-menu"
-            class="layout-menu menu-vertical menu bg-menu-theme">
+            class="layout-menu menu-vertical menu bg-menu-theme"
+          >
             <div class="app-brand demo justify-content-start">
               <a href="#" class="app-brand-link">
                 <span
-                  class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray">
+                  class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray"
+                >
                   DEMO
                 </span>
               </a>
               <button
-                class="layout-menu-toggle menu-link text-large ms-auto d-flex d-xl-none">
+                class="layout-menu-toggle menu-link text-large ms-auto d-flex d-xl-none"
+              >
                 <i class="fas fa-chevron-left"></i>
               </button>
             </div>
@@ -47,26 +52,26 @@
             <div class="menu-inner-shadow"></div>
 
             <ul class="menu-inner py-1">
-              <li class="menu-item active">
-                <a href="#" class="menu-link">
+              <li class="menu-item">
+                <a href="./index.html" class="menu-link">
                   <i class="fas fa-chart-pie menu-icon tf-icons"></i>
                   <div>Dashboard</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./tour.html" class="menu-link">
                   <i class="fa-solid fa-ticket menu-icon tf-icons"></i>
                   <div>Tur paket</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./orders.html" class="menu-link">
                   <i class="fa-solid fa-rectangle-list menu-icon tf-icons"></i>
                   <div>Buyurtmalar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./airplane.html" class="menu-link">
                   <i class="fa-solid fa-plane menu-icon tf-icons"></i>
                   <div>Havo yo'llari</div>
                 </a>
@@ -78,37 +83,37 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./room.html" class="menu-link">
                   <i class="fa-solid fa-bed menu-icon tf-icons"></i>
                   <div>Xonalar</div>
                 </a>
               </li>
-              <li class="menu-item">
-                <a href="#" class="menu-link">
+              <li class="menu-item active">
+                <a href="./adminstrator.html" class="menu-link">
                   <i class="fa-solid fa-user-tie menu-icon tf-icons"></i>
                   <div>Adminstrator</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./role.html" class="menu-link">
                   <i class="fa-solid fa-circle-check menu-icon tf-icons"></i>
                   <div>Role</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./news.html" class="menu-link">
                   <i class="fa-solid fa-newspaper menu-icon tf-icons"></i>
                   <div>Yangiliklar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./branch.html" class="menu-link">
                   <i class="fa-solid fa-code-branch menu-icon tf-icons"></i>
                   <div>Filyallar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./settings.html" class="menu-link">
                   <i class="fa-solid fa-gear menu-icon tf-icons"></i>
                   <div>Sozlamalar</div>
                 </a>
@@ -119,9 +124,11 @@
           <div class="layout-page">
             <nav
               class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-              id="layout-navbar">
+              id="layout-navbar"
+            >
               <div
-                class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+                class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none"
+              >
                 <button class="btn nav-item nav-link px-0 me-xl-4">
                   <svg
                     aria-hidden="true"
@@ -131,27 +138,32 @@
                     class="svg-inline--fa fa-bars"
                     role="img"
                     xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 448 512">
+                    viewBox="0 0 448 512"
+                  >
                     <path
                       fill="currentColor"
-                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"></path>
+                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
+                    ></path>
                   </svg>
                 </button>
               </div>
               <div
                 class="navbar-nav-right d-flex align-items-center"
-                id="navbar-collapse">
+                id="navbar-collapse"
+              >
                 <ul class="navbar-nav flex-row align-items-center ms-auto">
                   <li class="nav-item me-4">
                     <div
-                      class="nav-item dropdown ml-auto pr-lang-dropdown dropdown">
+                      class="nav-item dropdown ml-auto pr-lang-dropdown dropdown"
+                    >
                       <button
                         type="button"
                         id="languageDropdown"
                         aria-expanded="false"
                         data-toggle="dropdown"
                         aria-haspopup="true"
-                        class="btn btn-outline-info dropdown-toggle dropdown-toggle btn btn-primary">
+                        class="btn btn-outline-info dropdown-toggle dropdown-toggle btn btn-primary"
+                      >
                         Русский
                       </button>
                     </div>
@@ -162,12 +174,14 @@
                         type="button"
                         id="dropdown-basic"
                         aria-expanded="false"
-                        class="pr-dropdown-user dropdown-toggle btn btn-none">
+                        class="pr-dropdown-user dropdown-toggle btn btn-none"
+                      >
                         <div class="avatar avatar-online">
                           <img
                             src="./img/no-photo.webp"
                             alt=""
-                            class="w-px-40 h-auto rounded-circle" />
+                            class="w-px-40 h-auto rounded-circle"
+                          />
                         </div>
                       </button>
                     </div>
@@ -180,7 +194,8 @@
               <div class="container-xxl flex-grow-1 container-p-y">
                 <div>
                   <div
-                    class="d-flex mb-4 align-items-center justify-content-between">
+                    class="d-flex mb-4 align-items-center justify-content-between"
+                  >
                     <h4 class="py-3 mb-0">
                       <span class="text-muted fw-light">
                         <a href="#">Asosiy</a> /
@@ -194,8 +209,8 @@
                   <div class="card">
                     <div class="card-body">
                       <div
-                        class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-between mb-3">
-                      </div>
+                        class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-between mb-3"
+                      ></div>
                       <div class="table-responsive mb-4">
                         <table class="table table-striped table-hover">
                           <thead>
@@ -212,21 +227,27 @@
                           <tbody>
                             <tr>
                               <td>1</td>
-                              <td><a href="./adminstrator-view.html">Toxirjonova Dildora Sardorovna</a></td>
                               <td>
-                                +998 99 617 45 65
+                                <a href="./adminstrator-view.html"
+                                  >Toxirjonova Dildora Sardorovna</a
+                                >
+                              </td>
+                              <td>+998 99 617 45 65</td>
+                              <td>toxirjonova45@gmail.com</td>
+                              <td>67</td>
+                              <td>
+                                <input
+                                  type="checkbox"
+                                  name="parent_id"
+                                  disabled=""
+                                  checked=""
+                                />
                               </td>
                               <td>
-                                toxirjonova45@gmail.com
-                              </td>
-                              <td>
-                                67
-                              </td>
-                              <td>
-                                <input type="checkbox" name="parent_id" disabled="" checked="">
-                              </td>
-                              <td>
-                                <a class="btn p-1" href="./adminstrator-create.html">
+                                <a
+                                  class="btn p-1"
+                                  href="./adminstrator-create.html"
+                                >
                                   <i class="fas fa-pen"></i>
                                 </a>
                                 <button class="btn p-1">
@@ -236,21 +257,26 @@
                             </tr>
                             <tr>
                               <td>2</td>
-                              <td><a href="./adminstrator-view.html">Nuriddinov Alisher Farxodvich</a></td>
                               <td>
-                                +998 93 517 75 65
+                                <a href="./adminstrator-view.html"
+                                  >Nuriddinov Alisher Farxodvich</a
+                                >
+                              </td>
+                              <td>+998 93 517 75 65</td>
+                              <td>alisher45200@gmail.com</td>
+                              <td>82</td>
+                              <td>
+                                <input
+                                  type="checkbox"
+                                  name="parent_id"
+                                  disabled=""
+                                />
                               </td>
                               <td>
-                                alisher45200@gmail.com
-                              </td>
-                              <td>
-                                82
-                              </td>
-                              <td>
-                                <input type="checkbox" name="parent_id" disabled="">
-                              </td>
-                              <td>
-                                <a class="btn p-1" href="./adminstrator-create.html">
+                                <a
+                                  class="btn p-1"
+                                  href="./adminstrator-create.html"
+                                >
                                   <i class="fas fa-pen"></i>
                                 </a>
                                 <button class="btn p-1">
@@ -262,14 +288,16 @@
                         </table>
                       </div>
                       <div
-                        class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+                        class="d-flex flex-column flex-md-row justify-content-between align-items-center"
+                      >
                         <span class="mb-2 mb-md-0"
                           >Показаны записи 10 из 12</span
                         >
                         <ul
                           class="pagination m-0 align-items-center"
                           role="navigation"
-                          aria-label="Pagination">
+                          aria-label="Pagination"
+                        >
                           <li class="prev">
                             <a
                               class=""
@@ -279,8 +307,7 @@
                               aria-label="Previous page"
                               rel="prev"
                               ><button class="page-link">
-                                <i class="fa-solid fa-angle-left"></i>
-                              </button
+                                <i class="fa-solid fa-angle-left"></i></button
                             ></a>
                           </li>
                           <li class="page-item active">
@@ -313,8 +340,7 @@
                               aria-label="Next page"
                               rel="next"
                               ><button class="page-link">
-                                <i class="fa-solid fa-angle-right"></i>
-                              </button
+                                <i class="fa-solid fa-angle-right"></i></button
                             ></a>
                           </li>
                         </ul>
@@ -339,9 +365,11 @@
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+  ></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+  ></script>
 </html>
