--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./orders.html" class="menu-link">
                   <i class="fa-solid fa-rectangle-list menu-icon tf-icons"></i>
                   <div>Buyurtmalar</div>
                 </a>
@@ -83,37 +83,37 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./room.html" class="menu-link">
                   <i class="fa-solid fa-bed menu-icon tf-icons"></i>
                   <div>Xonalar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./adminstrator.html" class="menu-link">
                   <i class="fa-solid fa-user-tie menu-icon tf-icons"></i>
                   <div>Adminstrator</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./role.html" class="menu-link">
                   <i class="fa-solid fa-circle-check menu-icon tf-icons"></i>
                   <div>Role</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./news.html" class="menu-link">
                   <i class="fa-solid fa-newspaper menu-icon tf-icons"></i>
                   <div>Yangiliklar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./branch.html" class="menu-link">
                   <i class="fa-solid fa-code-branch menu-icon tf-icons"></i>
                   <div>Filyallar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./settings.html" class="menu-link">
                   <i class="fa-solid fa-gear menu-icon tf-icons"></i>
                   <div>Sozlamalar</div>
                 </a>
