--- a/airplane.html
+++ b/airplane.html
@@ -30,16 +30,19 @@
         <div class="layout-container">
           <aside
             id="layout-menu"
-            class="layout-menu menu-vertical menu bg-menu-theme">
+            class="layout-menu menu-vertical menu bg-menu-theme"
+          >
             <div class="app-brand demo justify-content-start">
-              <a href="#" class="app-brand-link">
+              <a href="./index.html" class="app-brand-link">
                 <span
-                  class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray">
+                  class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray"
+                >
                   DEMO
                 </span>
               </a>
               <button
-                class="layout-menu-toggle menu-link text-large ms-auto d-flex d-xl-none">
+                class="layout-menu-toggle menu-link text-large ms-auto d-flex d-xl-none"
+              >
                 <i class="fas fa-chevron-left"></i>
               </button>
             </div>
@@ -47,26 +50,26 @@
             <div class="menu-inner-shadow"></div>
 
             <ul class="menu-inner py-1">
-              <li class="menu-item active">
-                <a href="#" class="menu-link">
+              <li class="menu-item">
+                <a href="./index.html" class="menu-link">
                   <i class="fas fa-chart-pie menu-icon tf-icons"></i>
                   <div>Dashboard</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./tour.html" class="menu-link">
                   <i class="fa-solid fa-ticket menu-icon tf-icons"></i>
                   <div>Tur paket</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./orders.html" class="menu-link">
                   <i class="fa-solid fa-rectangle-list menu-icon tf-icons"></i>
                   <div>Buyurtmalar</div>
                 </a>
               </li>
-              <li class="menu-item">
-                <a href="#" class="menu-link">
+              <li class="menu-item active">
+                <a href="./airplane.html" class="menu-link">
                   <i class="fa-solid fa-plane menu-icon tf-icons"></i>
                   <div>Havo yo'llari</div>
                 </a>
@@ -78,37 +81,37 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./room.html" class="menu-link">
                   <i class="fa-solid fa-bed menu-icon tf-icons"></i>
                   <div>Xonalar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./adminstrator.html" class="menu-link">
                   <i class="fa-solid fa-user-tie menu-icon tf-icons"></i>
                   <div>Adminstrator</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./role.html" class="menu-link">
                   <i class="fa-solid fa-circle-check menu-icon tf-icons"></i>
                   <div>Role</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./news.html" class="menu-link">
                   <i class="fa-solid fa-newspaper menu-icon tf-icons"></i>
                   <div>Yangiliklar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./branch.html" class="menu-link">
                   <i class="fa-solid fa-code-branch menu-icon tf-icons"></i>
                   <div>Filyallar</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./settings.html" class="menu-link">
                   <i class="fa-solid fa-gear menu-icon tf-icons"></i>
                   <div>Sozlamalar</div>
                 </a>
