--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             class="layout-menu menu-vertical menu bg-menu-theme"
           >
             <div class="app-brand demo justify-content-start">
-              <a href="#" class="app-brand-link">
+              <a href="./index.html" class="app-brand-link">
                 <span
                   class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray"
                 >
@@ -53,7 +53,7 @@
 
             <ul class="menu-inner py-1">
               <li class="menu-item active">
-                <a href="#" class="menu-link">
+                <a href="./index.html" class="menu-link">
                   <i class="fas fa-chart-pie menu-icon tf-icons"></i>
                   <div>Dashboard</div>
                 </a>
