--- a/adminstrator.html
+++ b/adminstrator.html
@@ -35,7 +35,7 @@
             class="layout-menu menu-vertical menu bg-menu-theme"
           >
             <div class="app-brand demo justify-content-start">
-              <a href="#" class="app-brand-link">
+              <a href="./index.html" class="app-brand-link">
                 <span
                   class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray"
                 >
