--- a/role-create.html
+++ b/role-create.html
@@ -35,7 +35,7 @@
             class="layout-menu menu-vertical menu bg-menu-theme"
           >
             <div class="app-brand demo justify-content-start">
-              <a href="#" class="app-brand-link">
+              <a href="./index.html" class="app-brand-link">
                 <span
                   class="app-brand-text demo menu-text fw-bolder text-uppercase text-gray"
                 >
@@ -64,7 +64,7 @@
                   <div>Tur paket</div>
                 </a>
               </li>
-              <li class="menu-item">
+              <li class="menu-item ">
                 <a href="./orders.html" class="menu-link">
                   <i class="fa-solid fa-rectangle-list menu-icon tf-icons"></i>
                   <div>Buyurtmalar</div>
@@ -88,13 +88,13 @@
                   <div>Xonalar</div>
                 </a>
               </li>
-              <li class="menu-item active">
+              <li class="menu-item">
                 <a href="./adminstrator.html" class="menu-link">
                   <i class="fa-solid fa-user-tie menu-icon tf-icons"></i>
                   <div>Adminstrator</div>
                 </a>
               </li>
-              <li class="menu-item">
+              <li class="menu-item active">
                 <a href="./role.html" class="menu-link">
                   <i class="fa-solid fa-circle-check menu-icon tf-icons"></i>
                   <div>Role</div>
