--- a/index.html
+++ b/index.html
@@ -194,11 +194,49 @@
               <div class="container-xxl flex-grow-1 container-p-y">
                 <div>
                   <h4 class="py-3 mb-4">Панель управления</h4>
-                  <div class="card">
+                  <div class="card mb-4">
                     <div class="header text-center p-3">
                       <h4 class="title">Добро пожаловать, администратор</h4>
                     </div>
                     <div class="content"></div>
+                  </div>
+                  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
+                      <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="./img/2.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h3>First slide</h3>
+                          <p>Eos mutat malis maluisset et, agam ancillae quo te, in vim congue pertinacia.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="./img/6.jpg" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h3>Second slide</h3>
+                          <p>In numquam omittam sea.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="./img/monte.png" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h3>Third slide</h3>
+                          <p>Lorem ipsum dolor sit amet, virtute consequat ea qui, minim graeco mel no.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExample" role="button" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExample" role="button" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </a>
                   </div>
                 </div>
               </div>
