--- a/tour.html
+++ b/tour.html
@@ -875,12 +875,14 @@
     </div>
 
     <!-- Tour view modal -->
-    <div class="modal fade" id="tourDetail" tabindex="-1" style="display: block;" aria-modal="true" role="dialog">
-      <div class="modal-dialog modal-lg modal-simple modal-enable-otp modal-dialog-centered">
-        <div class="modal-content p-3 p-md-5">
-          <div class="modal-body">
+    <div class="modal fade" id="tourDetail" tabindex="-1" aria-modal="true" role="dialog">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title">Состав пакета</h3>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              <h3 class="mb-3">Состав пакета</h3>
+          </div>
+          <div class="modal-body">
               <div class="table-responsive mb-4">
                 <table class="table table-striped table-hover">
                   <tbody>
