--- a/tour-order.html
+++ b/tour-order.html
@@ -64,7 +64,7 @@
                   <div>Tur paket</div>
                 </a>
               </li>
-              <li class="menu-item ">
+              <li class="menu-item">
                 <a href="./orders.html" class="menu-link">
                   <i class="fa-solid fa-rectangle-list menu-icon tf-icons"></i>
                   <div>Buyurtmalar</div>
@@ -196,15 +196,15 @@
                   <div
                     class="d-flex mb-4 align-items-center justify-content-between"
                   >
-                  <h4 class="py-3 mb-0">
-                    <span class="text-muted fw-light"
-                      ><a href="/">Asosiy</a> /</span
-                    >
-                    <span class="text-muted fw-light"
-                      ><a href="./tour.html">Turlar</a> /</span
-                    >
-                    Tur 1
-                  </h4>
+                    <h4 class="py-3 mb-0">
+                      <span class="text-muted fw-light"
+                        ><a href="/">Asosiy</a> /</span
+                      >
+                      <span class="text-muted fw-light"
+                        ><a href="./tour.html">Turlar</a> /</span
+                      >
+                      Tur 1
+                    </h4>
                     <a class="btn btn-info" href="./tour.html">Orqaga</a>
                   </div>
                   <div class="card mb-3">
@@ -225,12 +225,8 @@
                           <tbody>
                             <tr>
                               <td>Вьетнам: Нячанг из Ташкента</td>
-                              <td>
-                                TAS-38529-CXR
-                              </td>
-                              <td>
-                                Вьетнам
-                              </td>
+                              <td>TAS-38529-CXR</td>
+                              <td>Вьетнам</td>
                               <td>05.06.2024—12.06.2024</td>
                               <td>7</td>
                               <td>CROWN HOTEL NHA TRANG - Special offer</td>
@@ -238,6 +234,10 @@
                           </tbody>
                         </table>
                       </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3">
+                    <div class="card-body">
                       <div class="table-responsive mb-4">
                         <h6>Проживание</h6>
                         <table class="table table-striped table-hover">
@@ -254,12 +254,8 @@
                           <tbody>
                             <tr>
                               <td><a href="#">CROWN HOTEL NHA TRANG 3*</a></td>
-                              <td>
-                                Нячанг
-                              </td>
-                              <td>
-                                Superior City View With Balcony	
-                              </td>
+                              <td>Нячанг</td>
+                              <td>Superior City View With Balcony</td>
                               <td>2Adl</td>
                               <td>BB</td>
                               <td>05.06.2024—12.06.2024</td>
@@ -267,6 +263,10 @@
                           </tbody>
                         </table>
                       </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3">
+                    <div class="card-body">
                       <div class="table-responsive mb-4">
                         <h6>Транспорт</h6>
                         <table class="table table-striped table-hover">
@@ -288,12 +288,8 @@
                                   <option value="4">Baku</option>
                                 </select>
                               </td>
-                              <td>
-                                05.06.2024
-                              </td>
-                              <td>
-                                2
-                              </td>
+                              <td>05.06.2024</td>
+                              <td>2</td>
                             </tr>
                           </tbody>
                         </table>
@@ -314,12 +310,8 @@
                                   <option value="4">Baku</option>
                                 </select>
                               </td>
-                              <td>
-                                05.06.2024
-                              </td>
-                              <td>
-                                2
-                              </td>
+                              <td>05.06.2024</td>
+                              <td>2</td>
                             </tr>
                           </tbody>
                         </table>
@@ -329,6 +321,10 @@
                           <div>Bagaj: <span>20kg</span></div>
                         </div>
                       </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3">
+                    <div class="card-body">
                       <div class="table-responsive mb-4">
                         <h6>Страхование</h6>
                         <table class="table table-striped table-hover">
@@ -342,12 +338,8 @@
                           <tbody>
                             <tr>
                               <td>INSURANCE (60000 EUR)</td>
-                              <td>
-                                05.06.2024 - 12.06.2024
-                              </td>
-                              <td>
-                                2
-                              </td>
+                              <td>05.06.2024 - 12.06.2024</td>
+                              <td>2</td>
                             </tr>
                           </tbody>
                         </table>
@@ -494,14 +486,34 @@
                         <div class="col-md-4 mb-3">
                           <div class="d-flex">
                             <div class="form-check">
-                              <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                              <label class="form-check-label me-4" for="defaultRadio2">
+                              <input
+                                name="default-radio-1"
+                                class="form-check-input"
+                                type="radio"
+                                value=""
+                                id="defaultRadio2"
+                                checked=""
+                              />
+                              <label
+                                class="form-check-label me-4"
+                                for="defaultRadio2"
+                              >
                                 Муж.
                               </label>
                             </div>
                             <div class="form-check">
-                              <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                              <label class="form-check-label" for="defaultRadio2">
+                              <input
+                                name="default-radio-1"
+                                class="form-check-input"
+                                type="radio"
+                                value=""
+                                id="defaultRadio2"
+                                checked=""
+                              />
+                              <label
+                                class="form-check-label"
+                                for="defaultRadio2"
+                              >
                                 Жен.
                               </label>
                             </div>
@@ -650,14 +662,34 @@
                         <div class="col-md-4 mb-3">
                           <div class="d-flex">
                             <div class="form-check">
-                              <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                              <label class="form-check-label me-4" for="defaultRadio2">
+                              <input
+                                name="default-radio-1"
+                                class="form-check-input"
+                                type="radio"
+                                value=""
+                                id="defaultRadio2"
+                                checked=""
+                              />
+                              <label
+                                class="form-check-label me-4"
+                                for="defaultRadio2"
+                              >
                                 Муж.
                               </label>
                             </div>
                             <div class="form-check">
-                              <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                              <label class="form-check-label" for="defaultRadio2">
+                              <input
+                                name="default-radio-1"
+                                class="form-check-input"
+                                type="radio"
+                                value=""
+                                id="defaultRadio2"
+                                checked=""
+                              />
+                              <label
+                                class="form-check-label"
+                                for="defaultRadio2"
+                              >
                                 Жен.
                               </label>
                             </div>
@@ -669,63 +701,93 @@
                   <h6>Примечание к заявке</h6>
                   <div class="card mb-3">
                     <div class="card-body">
-                     <div class="row">
-                      <div class="col-md-3 mb-3">
-                        <div class="form-check">
-                          <label class="form-check-label" for="defaultCheck3">
-                            вместе с заявкой №
-                          </label>
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
+                      <div class="row">
+                        <div class="col-md-3 mb-3">
+                          <div class="form-check">
+                            <label class="form-check-label" for="defaultCheck3">
+                              вместе с заявкой №
+                            </label>
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck3"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <div class="form-check">
+                            <label class="form-check-label" for="defaultCheck3">
+                              молодожены
+                            </label>
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck3"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <div class="form-check">
+                            <label class="form-check-label" for="defaultCheck3">
+                              вид на море
+                            </label>
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck3"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <div class="form-check">
+                            <label class="form-check-label" for="defaultCheck3">
+                              тихое место
+                            </label>
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck3"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <div class="form-check">
+                            <label class="form-check-label" for="defaultCheck3">
+                              постоянный гость отеля
+                            </label>
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck3"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <div class="form-check">
+                            <label class="form-check-label" for="defaultCheck3">
+                              люлька для младенца в номер
+                            </label>
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck3"
+                            />
+                          </div>
+                        </div>
+                        <div class="mb-3">
+                          <textarea
+                            name=""
+                            id=""
+                            class="form-control"
+                          ></textarea>
                         </div>
                       </div>
-                      <div class="col-md-3 mb-3">
-                        <div class="form-check">
-                          <label class="form-check-label" for="defaultCheck3">
-                            молодожены
-                          </label>
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                        </div>
-                      </div>
-                      <div class="col-md-3 mb-3">
-                        <div class="form-check">
-                          <label class="form-check-label" for="defaultCheck3">
-                            вид на море
-                          </label>
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                        </div>
-                      </div>
-                      <div class="col-md-3 mb-3">
-                        <div class="form-check">
-                          <label class="form-check-label" for="defaultCheck3">
-                            тихое место
-                          </label>
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                        </div>
-                      </div>
-                      <div class="col-md-3 mb-3">
-                        <div class="form-check">
-                          <label class="form-check-label" for="defaultCheck3">
-                            постоянный гость отеля
-                          </label>
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                        </div>
-                      </div>
-                      <div class="col-md-3 mb-3">
-                        <div class="form-check">
-                          <label class="form-check-label" for="defaultCheck3">
-                            люлька для младенца в номер
-                          </label>
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                        </div>
-                      </div>
-                      <div class="mb-3">
-                        <textarea
-                          name=""
-                          id=""
-                          class="form-control"
-                        ></textarea>
-                      </div>
-                     </div>
                     </div>
                   </div>
                   <h6>Цена</h6>
@@ -736,7 +798,9 @@
                           <div class="dt-total-price">1099.13 USD</div>
                           <div class="d-flex justify-content-around">
                             <button class="btn btn-primary">Пересчитать</button>
-                            <button class="btn btn-primary" disabled>Бронировать</button>
+                            <button class="btn btn-primary" disabled>
+                              Бронировать
+                            </button>
                           </div>
                         </div>
                       </div>
