updates from tour create

--- a/hostel.html
+++ b/hostel.html
@@ -236,6 +236,7 @@
                           <tr>
                             <th>#</th>
                             <th>Nomi</th>
+                            <th>Starts</th>
                             <th>Manzili</th>
                             <th>Tasnifi</th>
                             <th>&nbsp;</th>
@@ -257,6 +258,7 @@
                             <td>
                               <a href="./hostel-view.html">Al Riffa Hotel</a>
                             </td>
+                            <td>3</td>
                             <td>
                               Ibrahim Al Khalil Road, Al Misfalah District,
                               Makkah, Saudi Arabia
@@ -288,6 +290,7 @@
                                 >Nawazi Al Fateh Hotel</a
                               >
                             </td>
+                            <td>4</td>
                             <td>
                               King Abdulaziz Road, Al Misfalah District, Makkah,
                               Saudi Arabia
