updates from tour

--- a/tour-create.html
+++ b/tour-create.html
@@ -214,7 +214,7 @@
                       <div class="row">
                         <div class="col-md-4 col-6 mb-3">
                           <label class="form-label" for="hostel-name_uz"
-                            >NOMI</label
+                            >тур</label
                           ><input
                             type="text"
                             id="hostel-name_uz"
@@ -226,8 +226,8 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <div class="form-group">
-                            <label class="form-label" for="exampleSelect">Mehmonxona</label>
-                            <select class="form-select select2" id="exampleSelect" multiple="multiple" style="width: 100%;">
+                            <label class="form-label" for="forHostel">гостиница</label>
+                            <select class="form-select select2" id="forHostel" multiple="multiple" style="width: 100%;">
                               <option value="option1">Hilton</option>
                               <option value="option2">Wyndham</option>
                               <option value="option3">City Palace</option>
@@ -235,13 +235,13 @@
                           </div>
                         </div>
                         <div class="mb-3 col-md-4 col-6">
-                          <label class="form-label" for="hostel-address_uz"
-                            >Havo yo'llari</label
+                          <label class="form-label" for="forAirways"
+                            >дыхательные пути</label
                           >
-                          <select name="" id="" class="form-select">
-                            <option value="1">Gulbahor Airways</option>
-                            <option value="1">O'zbekiston Airways</option>
-                            <option value="1">Semurg' Airways</option>
+                          <select class="form-select select2" id="forAirways" multiple="multiple" style="width: 100%;">
+                            <option value="option1">Gulbahor Airways</option>
+                            <option value="option2">O'zb Airways</option>
+                            <option value="option3">Semurg' Airways</option>
                           </select>
                         </div>
                         <div class="mb-3 col-md-4 col-6">
@@ -258,7 +258,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >where to</label
+                            >город</label
                           ><select name="" id="" class="form-select">
                             <option value="1">O'zbekistom</option>
                             <option value="1">Dubai</option>
@@ -267,7 +267,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Where to (city)</label
+                            >страна</label
                           ><select name="" id="" class="form-select">
                             <option value="1">Toskent</option>
                             <option value="1">Istanbul</option>
@@ -285,7 +285,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >start date</label
+                            >вылет от</label
                           ><input
                             type="datetime-local"
                             id="hostel-address_uz"
@@ -294,7 +294,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >end date</label
+                            >до</label
                           ><input
                             type="datetime-local"
                             id="hostel-address_uz"
@@ -308,10 +308,10 @@
                   <div class="card mb-4">
                     <div class="card-body">
                       <div class="row">
-                        <h5>Erkaklar</h5>
+                        <h5>Мужчины</h5>
                         <div class="col-md-4 col-6 mb-3">
                           <label class="form-label" for="hostel-name_uz"
-                            >1 xona</label
+                            >1 КОМНАТА</label
                           ><input
                             type="number"
                             id="hostel-name_uz"
@@ -323,7 +323,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >2 xona</label
+                            >2 КОМНАТЫ</label
                           ><input
                           type="number"
                           id="hostel-name_uz"
@@ -335,7 +335,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >3 xona</label
+                            >3 КОМНАТЫ</label
                           ><input
                           type="number"
                           id="hostel-name_uz"
@@ -345,10 +345,10 @@
                           value=""
                         />
                         </div>
-                        <h5>Ayollar</h5>
+                        <h5>женщины</h5>
                         <div class="col-md-4 col-6 mb-3">
                           <label class="form-label" for="hostel-name_uz"
-                            >1 xona</label
+                            >1 КОМНАТА</label
                           ><input
                             type="number"
                             id="hostel-name_uz"
@@ -360,7 +360,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >2 xona</label
+                            >2 КОМНАТЫ</label
                           ><input
                           type="number"
                           id="hostel-name_uz"
@@ -372,7 +372,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >3 xona</label
+                            >3 КОМНАТЫ</label
                           ><input
                           type="number"
                           id="hostel-name_uz"
@@ -390,7 +390,7 @@
                       <div class="row">
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Standart narx</label
+                            >СТАНДАРТНАЯ ЦЕНА</label
                           ><input
                             type="number"
                             id="hostel-address_uz"
@@ -399,7 +399,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Comfort narx</label
+                            >КОМФОРТ ЦЕНА</label
                           ><input
                             type="number"
                             id="hostel-address_uz"
@@ -408,7 +408,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Biznes narx</label
+                            >БИЗНЕС ЦЕНА</label
                           ><input
                             type="number"
                             id="hostel-address_uz"
@@ -417,7 +417,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Standart bilet soni</label
+                            >СТАНДАРТНЫЙ БИЛЕТ</label
                           ><input
                             type="number"
                             id="hostel-address_uz"
@@ -426,7 +426,8 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Comfort bilet soni</label
+                            >
+                            КОМФОРТНЫЙ БИЛЕТ</label
                           ><input
                             type="number"
                             id="hostel-address_uz"
@@ -435,7 +436,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Biznes bilet soni</label
+                            >БИЗНЕС-БИЛЕТ</label
                           ><input
                             type="number"
                             id="hostel-address_uz"
@@ -459,7 +460,7 @@
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
-                            >Транспорт status</label
+                            >СТАТУС ТРАНСПОРТ</label
                           >
                           <select name="" id="" class="form-select">
                             <option value="1">business</option>
@@ -469,7 +470,7 @@
                         </div>
                         <div class="mb-3">
                           <label class="form-label" for="hostel-address_uz"
-                            >description</label
+                            >ОПИСАНИЕ</label
                           >
                           <textarea
                             name=""
@@ -506,6 +507,78 @@
                             id=""
                             class="form-control"
                           ></textarea>
+                        </div>
+                        <div class="col-md-4 d-flex align-items-center mb-3">
+                          <input
+                            class="form-check"
+                            type="checkbox"
+                            id="groups-is_active"
+                            name="is_active"
+                          /><label
+                            class="form-label mb-0 ms-2"
+                            for="groups-is_active"
+                            >дети на отдельной кровати</label
+                          >
+                        </div>
+                        <div class="col-md-4 d-flex align-items-center mb-3">
+                          <input
+                            class="form-check"
+                            type="checkbox"
+                            id="groups-is_active"
+                            name="is_active"
+                          /><label
+                            class="form-label mb-0 ms-2"
+                            for="groups-is_active"
+                            >нет остановки продажи</label
+                          >
+                        </div>
+                        <div class="col-md-4 d-flex align-items-center mb-3">
+                          <input
+                            class="form-check"
+                            type="checkbox"
+                            id="groups-is_active"
+                            name="is_active"
+                          /><label
+                            class="form-label mb-0 ms-2"
+                            for="groups-is_active"
+                            >есть места на рейсы</label
+                          >
+                        </div>
+                        <div class="col-md-4 d-flex align-items-center mb-3">
+                          <input
+                            class="form-check"
+                            type="checkbox"
+                            id="groups-is_active"
+                            name="is_active"
+                          /><label
+                            class="form-label mb-0 ms-2"
+                            for="groups-is_active"
+                            >мгновенное подтверждение</label
+                          >
+                        </div>
+                        <div class="col-md-4 d-flex align-items-center mb-3">
+                          <input
+                            class="form-check"
+                            type="checkbox"
+                            id="groups-is_active"
+                            name="is_active"
+                          /><label
+                            class="form-label mb-0 ms-2"
+                            for="groups-is_active"
+                            >места повышенной комфортности</label
+                          >
+                        </div>
+                        <div class="col-md-4 d-flex align-items-center mb-3">
+                          <input
+                            class="form-check"
+                            type="checkbox"
+                            id="groups-is_active"
+                            name="is_active"
+                          /><label
+                            class="form-label mb-0 ms-2"
+                            for="groups-is_active"
+                            >группировать по гостинице</label
+                          >
                         </div>
                         <div>
                           <button type="submit" class="btn btn-success">
