--- a/tour.html
+++ b/tour.html
@@ -276,7 +276,7 @@
                     <div class="d-flex flex-column">
                       <div>
                         <label for="start-date" class="form-label"
-                          >Uchish</label
+                          >вылет от</label
                         >
                         <input
                           type="date"
@@ -286,7 +286,7 @@
                       </div>
                       <div>
                         <label for="end-date" class="form-label"
-                          >Qaytish</label
+                          >до</label
                         >
                         <input
                           type="date"
@@ -378,7 +378,7 @@
                     <div class="d-flex">
                       <div>
                         <label for="form-currency" class="form-label"
-                          >currency</label
+                          >цена</label
                         >
                         <select class="form-select" name="" id="">
                           <option value="0"></option>
@@ -392,7 +392,7 @@
                     <div class="d-flex flex-column">
                       <div>
                         <label for="form-price-to" class="form-label"
-                          >from</label
+                          >от</label
                         >
                         <select class="form-select" name="" id="">
                           <option value="0"></option>
@@ -404,7 +404,7 @@
                       </div>
                       <div>
                         <label for="form-night-to" class="form-label"
-                          >to</label
+                          >до</label
                         >
                         <select class="form-select" name="" id="">
                           <option value="0"></option>
